# myAgenticAIRepo

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
MyAgenticAIProject/: __init__.py  main.py
tests/: test_main.py
