[project]
name = "MyAgenticAIProject"
version = "0.1.0"
description = "Minimal agentic AI project scaffold"
readme = "README.md"
requires-python = ">=3.10"

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"